=== v0.1.65 ===

=== v0.1.64 ===
- Improve logging for upgrades
- Remove LND Admin
- Improve LND Connect IP detection
- Add NTP Servers

=== v0.1.63 ===
- Fix issues related to custom BTC+LND config
- Workaround LND deadlock after creating new wallet
- Other minor fixes

=== v0.1.62 ===
- Add ability to customize LND and BTC config via GUI
- Reorganized settings page
- Add status logs for LND and Electrum Server
- Add QuickSync bandwidth settings
- Fixed bug where upgrades could incorrectly appear available

=== v0.1.61 ===
- Changed device detection
- Better local IP detection
- Bug fixes

=== v0.1.60 ===
- Improved electrum status
- FullyNoded integration with Tor Link
- Improve QuickSync Torrent Transition
- Bug fixes

=== v0.1.59 ===
- Add HTTPS to Tor
- SSDs skip QuickSync by default
- Add lndmanage tool
- Custom LND Config
- GUI-wide password
- View upgrade changes on settings page
- Bug fixes: SSH key and PW generation, local upgrades

=== v0.1.58 ===
- Add improved debug info
- View Bitcoin debug log on settings page
- Improve Blockchain and QuickSync reset options
- Improve BTC RPC Explorer settings
- Bug fixes

=== v0.1.56 / 0.1.57 ===
- Automatically enable HTTPS service
- Allow port 443 through firewall

=== v0.1.55 ===
- Add HTTPS option for connecting to web GUI
- Add Bitcoin REST API Access via Tor
- Add default password warning

=== v0.1.54 ===
- Cyclic reboot bug fix for SSD driver detection

=== v0.1.53 ===
 - Upgrade LND to v0.8.0 beta
 - PGP verify LND and BTC for each upgrade
 - Improve SSD support for Raspberry Pi 4

=== v0.1.52 ===
- Fix bug with device product key check
- Improve drive mounting on Raspis w/ SSDs

=== v0.1.51 ===
- Logging and RAM tweaks for Rock64
- Add ngrok for debugging
- Upgrade RTL to 0.5.1

=== v0.1.50 ===
- Big fixes for myNode VM (still beta)
- Display footer on status page

=== v0.1.49 ===
- Update BTC RPC Explorer
- Add way to customize Bitcoin config
- Add beta x86 VM setup
- Improve QuickSync uploader tool